--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,16 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.14.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+
+  http: ^0.13.4
+  cached_network_image: ^3.1.0+1
+  url_launcher: ^6.0.17
+
 
 
   # The following adds the Cupertino Icons font to your application.
